Don't abuse number suffix superscripts.

--- a/tex/p055.tex
+++ b/tex/p055.tex
@@ -4,13 +4,13 @@
 \vs p055 0:2 This era of light and life, inaugurated by the Teacher Sons at the conclusion of their final planetary mission, continues indefinitely on the inhabited worlds. Each advancing stage of settled status may be segregated by the judicial actions of the Magisterial Sons into a succession of dispensations; but all such judicial actions are purely technical, in no way modifying the course of planetary events.
 \vs p055 0:3 \pc Only those planets which attain existence in the main circuits of the superuniverse are assured of continuous survival, but as far as we know, these worlds settled in light and life are destined to go on throughout the eternal ages of all future time.
 \vs p055 0:4 \pc There are 7 stages in the unfoldment of the era of light and life on an evolutionary world, and in this connection it should be noted that the worlds of the Spirit\hyp{}fused mortals evolve along lines identical with those of the Adjuster\hyp{}fusion series. These 7 stages of light and life are:
-\vs p055 0:5 \ublistelem{1.}\bibnobreakspace The 1\ts{st} or planetary stage.
-\vs p055 0:6 \ublistelem{2.}\bibnobreakspace The 2\ts{nd} or system stage.
-\vs p055 0:7 \ublistelem{3.}\bibnobreakspace The 3\ts{rd} or constellation stage.
-\vs p055 0:8 \ublistelem{4.}\bibnobreakspace The 4\ts{th} or local universe stage.
-\vs p055 0:9 \ublistelem{5.}\bibnobreakspace The 5\ts{th} or minor sector stage.
-\vs p055 0:10 \ublistelem{6.}\bibnobreakspace The 6\ts{th} or major sector stage.
-\vs p055 0:11 \ublistelem{7.}\bibnobreakspace The 7\ts{th} or superuniverse stage.
+\vs p055 0:5 \ublistelem{1.}\bibnobreakspace The first or planetary stage.
+\vs p055 0:6 \ublistelem{2.}\bibnobreakspace The second or system stage.
+\vs p055 0:7 \ublistelem{3.}\bibnobreakspace The third or constellation stage.
+\vs p055 0:8 \ublistelem{4.}\bibnobreakspace The fourth or local universe stage.
+\vs p055 0:9 \ublistelem{5.}\bibnobreakspace The fifth or minor sector stage.
+\vs p055 0:10 \ublistelem{6.}\bibnobreakspace The sixth or major sector stage.
+\vs p055 0:11 \ublistelem{7.}\bibnobreakspace The seventh or superuniverse stage.
 \vs p055 0:12 \pc At the conclusion of this narrative these stages of advancing development are described as they relate to the universe organization, but the planetary values of any stage may be attained by any world quite independent of the development of other worlds or of the superplanetary levels of universe administration.
 \usection{1.\bibnobreakspace The Morontia Temple}
 \vs p055 1:1 The presence of a morontia temple at the capital of an inhabited world is the certificate of the admission of such a sphere to the settled ages of light and life. Before the Teacher Sons leave a world at the conclusion of their terminal mission, they inaugurate this final epoch of evolutionary attainment; they preside on that day when the “holy temple comes down upon earth.” This event, signalizing the dawn of the era of light and life, is always honoured by the personal presence of the Paradise bestowal Son of that planet, who comes to witness this great day. There in this temple of unparalleled beauty, this bestowal Son of Paradise proclaims the long\hyp{}time Planetary Prince as the new Planetary Sovereign and invests such a faithful Lanonandek Son with new powers and extended authority over planetary affairs. The System Sovereign is also present and speaks in confirmation of these pronouncements.
@@ -27,7 +27,7 @@
 \vs p055 2:5 Many fusion candidates may be assembled in the spacious temple at the same time. And what a beautiful occasion when mortals thus forgather to witness the ascension of their loved ones in spiritual flames, and what a contrast to those earlier ages when mortals must commit their dead to the embrace of the terrestrial elements! The scenes of weeping and wailing characteristic of earlier epochs of human evolution are now replaced by ecstatic joy and the sublimest enthusiasm as these God\hyp{}knowing mortals bid their loved ones a transient farewell as they are removed from their material associations by the spiritual fires of consuming grandeur and ascending glory. On worlds settled in light and life, “funerals” are occasions of supreme joy, profound satisfaction, and inexpressible hope.
 \vs p055 2:6 The souls of these progressing mortals are increasingly filled with faith, hope, and assurance. The spirit permeating those gathered around the translation shrine resembles that of the joyful friends and relatives who might assemble at a graduating exercise for one of their group, or who might come together to witness the conferring of some great honour upon one of their number. And it would be decidedly helpful if less advanced mortals could only learn to view natural death with something of this same cheerfulness and light\hyp{}heartedness.
 \vs p055 2:7 \pc Mortal observers can see nothing of their translated associates subsequent to the fusion flash. Such translated souls proceed by Adjuster transit direct to the resurrection hall of the appropriate morontia\hyp{}training world. These transactions concerned with the translation of living human beings to the morontia world are supervised by an archangel who was assigned to such a world on the day when it was first settled in light and life.
-\vs p055 2:8 By the time a world attains the fourth stage of light and life, more than half the mortals leave the planet by translation from among the living. Such diminishment of death continues on and on, but I know of no system whose inhabited worlds, even though long settled in life, are entirely free from natural death as the technique of escape from the bonds of flesh. And until such a high state of planetary evolution is uniformly attained, the morontia\hyp{}training worlds of the local universe must continue in service as educational and cultural spheres for the evolving morontia progressors. The elimination of death is theoretically possible, but it has not yet occurred according to my observation. Perhaps such a status may be attained during the faraway stretches of the succeeding epochs of the 7\ts{th} stage of settled planetary life.
+\vs p055 2:8 By the time a world attains the fourth stage of light and life, more than half the mortals leave the planet by translation from among the living. Such diminishment of death continues on and on, but I know of no system whose inhabited worlds, even though long settled in life, are entirely free from natural death as the technique of escape from the bonds of flesh. And until such a high state of planetary evolution is uniformly attained, the morontia\hyp{}training worlds of the local universe must continue in service as educational and cultural spheres for the evolving morontia progressors. The elimination of death is theoretically possible, but it has not yet occurred according to my observation. Perhaps such a status may be attained during the faraway stretches of the succeeding epochs of the seventh stage of settled planetary life.
 \vs p055 2:9 \pc The translated souls of the flowering ages of the settled spheres do not pass through the mansion worlds. Neither do they sojourn, as students, on the morontia worlds of the system or constellation. They do not pass through any of the earlier phases of morontia life. They are the only ascending mortals who so nearly escape the morontia transition from material existence to semispirit status. The initial experience of such \bibemph{Son\hyp{}seized} mortals in the ascension career is in the services of the progression worlds of the universe headquarters. And from these study worlds of Salvington they go back as teachers to the very worlds they passed by, subsequently going on inward to Paradise by the established route of mortal ascension.
 \vs p055 2:10 Could you but visit a planet in an advanced stage of development, you would quickly grasp the reasons for providing for the differential reception of ascending mortals on the mansion and higher morontia worlds. You would readily understand that beings passing on from such highly evolved spheres are prepared to resume their Paradise ascent far in advance of the average mortal arriving from a disordered and backward world like Urantia.
 \vs p055 2:11 No matter from what level of planetary attainment human beings may ascend to the morontia worlds, the 7 mansion spheres afford them ample opportunity to gain in experience as teacher\hyp{}students all of everything which they failed to pass through because of the advanced status of their native planets.
@@ -58,14 +58,14 @@
 \usection{4.\bibnobreakspace Administrative Readjustments}
 \vs p055 4:1 In the successive stages of settled existence the inhabited worlds make marvellous progress under the wise and sympathetic administration of the volunteer Corps of the Finality, ascenders of Paradise attainment who have come back to minister to their brethren in the flesh. These finaliters are active in co\hyp{}operation with the Trinity Teacher Sons, but they do not begin their real participation in world affairs until the morontia temple appears on earth.
 \vs p055 4:2 Upon the formal inauguration of the planetary ministry of the Corps of the Finality, the majority of the celestial hosts withdraw. But the seraphic guardians of destiny continue their personal ministry to the progressing mortals in light; indeed such angels come in ever\hyp{}increasing numbers throughout the settled ages since larger and larger groups of human beings reach the third cosmic circle of co\hyp{}ordinate mortal attainment during the planetary life span.
-\vs p055 4:3 This is merely the first of the successive administrative adjustments which attend the unfolding of the successive ages of increasingly brilliant attainment on the inhabited worlds as they pass from the first to the 7\ts{th} stage of settled existence.
+\vs p055 4:3 This is merely the first of the successive administrative adjustments which attend the unfolding of the successive ages of increasingly brilliant attainment on the inhabited worlds as they pass from the first to the seventh stage of settled existence.
 \vs p055 4:4 \ublistelem{1.}\bibnobreakspace \bibemph{The first stage of light and life.} A world in this initial settled stage is being administered by three rulers:
 \vs p055 4:5 \ublistelem{a.}\bibnobreakspace The Planetary Sovereign, presently to be advised by a counselling Trinity Teacher Son, in all probability the chief of the terminal corps of such Sons to function on the planet.
 \vs p055 4:6 \ublistelem{b.}\bibnobreakspace The chief of the planetary corps of finaliters.
 \vs p055 4:7 \ublistelem{c.}\bibnobreakspace Adam and Eve, who function jointly as the unifiers of the dual leadership of the Prince\hyp{}Sovereign and the chief of finaliters.
 \vs p055 4:8 \pc Acting as interpreters for the seraphic guardians and the finaliters are the exalted and liberated midway creatures. One of the last acts of the Trinity Teacher Sons on their terminal mission is to liberate the midwayers of the realm and to promote (or restore) them to advanced planetary status, assigning them to responsible places in the new administration of the settled sphere. Such changes have already been made in the range of human vision as enable mortals to recognize these heretofore invisible cousins of the early Adamic regime. This is made possible by the final discoveries of physical science in liaison with the enlarged planetary functions of the Master Physical Controllers.
 \vs p055 4:9 The System Sovereign has authority to release midway creatures any time after the first settled stage so that they may humanize in the morontia by the aid of the Life Carriers and the physical controllers and, after receiving Thought Adjusters, start out on their Paradise ascension.
-\vs p055 4:10 In the third and subsequent stages, some of the midwayers are still functioning, chiefly as contact personalities for the finaliters, but as each stage of light and life is entered, new orders of liaison ministers largely replace the midwayers; very few of them ever remain beyond the fourth stage of light. The 7\ts{th} stage will witness the coming of the first absonite ministers from Paradise to serve in the places of certain universe creatures.
+\vs p055 4:10 In the third and subsequent stages, some of the midwayers are still functioning, chiefly as contact personalities for the finaliters, but as each stage of light and life is entered, new orders of liaison ministers largely replace the midwayers; very few of them ever remain beyond the fourth stage of light. The seventh stage will witness the coming of the first absonite ministers from Paradise to serve in the places of certain universe creatures.
 \vs p055 4:11 \ublistelem{2.}\bibnobreakspace \bibemph{The second stage of light and life.} This epoch is signalized on the worlds by the arrival of a Life Carrier who becomes the volunteer adviser of the planetary rulers regarding the further efforts to purify and stabilize the mortal race. Thus do the Life Carriers actively participate in the further evolution of the human race --- physically, socially, and economically. And then they extend their supervision to the further purification of the mortal stock by the drastic elimination of the retarded and persisting remnants of inferior potential of an intellectual, philosophic, cosmic, and spiritual nature. Those who design and plant life on an inhabited world are fully competent to advise the Material Sons and Daughters, who have full and unquestioned authority to purge the evolving race of all detrimental influences.
 \vs p055 4:12 From the second stage on throughout the career of a settled planet the Teacher Sons serve as counsellors to the finaliters. During such missions they serve as volunteers and not by assignment; and they serve exclusively with the finaliter corps except that, upon the consent of the System Sovereign, they may be had as advisers to the Planetary Adam and Eve.
 \vs p055 4:13 \ublistelem{3.}\bibnobreakspace \bibemph{The third stage of light and life.} During this epoch the inhabited worlds arrive at a new appreciation of the Ancients of Days, the second phase of God the Sevenfold, and the representatives of these superuniverse rulers enter into new relationships with the planetary administration.
@@ -74,7 +74,7 @@
 \vs p055 4:16 The ministering\hyp{}spirit quartettes consist of: the seraphic chief of the sphere, the superuniverse secoraphic counsellor, the archangel of translations, and the omniaphim who functions as the personal representative of the Assigned Sentinel stationed on the system headquarters. But these advisers never proffer counsel unless it is asked for.
 \vs p055 4:17 \ublistelem{4.}\bibnobreakspace \bibemph{The fourth stage of light and life.} On the worlds the Trinity Teacher Sons appear in new roles. Assisted by the creature\hyp{}trinitized sons so long associated with their order, they now come to the worlds as volunteer counsellors and advisers to the Planetary Sovereign and his associates. Such couples --- Paradise\hyp{}Havona\hyp{}trinitized sons and ascender\hyp{}trinitized sons --- represent differing universe viewpoints and diverse personal experiences which are highly serviceable to the planetary rulers.
 \vs p055 4:18 At any time after this age the Planetary Adam and Eve can petition the Sovereign Creator Son for release from planetary duties in order to begin their Paradise ascent; or they can remain on the planet as directors of the newly appearing order of increasingly spiritual society composed of advanced mortals striving to comprehend the philosophic teachings of the finaliters portrayed by the Brilliant Evening Stars, who are now assigned to these worlds to collaborate in pairs with the seconaphim from the headquarters of the superuniverse.
-\vs p055 4:19 The finaliters are chiefly engaged in initiating the new and supermaterial activities of society --- social, cultural, philosophic, cosmic, and spiritual. As far as we can discern, they will continue this ministry far into the 7\ts{th} epoch of evolutionary stability, when, possibly, they may go forth to minister in outer space; whereupon we conjecture their places may be taken by absonite beings from Paradise.
+\vs p055 4:19 The finaliters are chiefly engaged in initiating the new and supermaterial activities of society --- social, cultural, philosophic, cosmic, and spiritual. As far as we can discern, they will continue this ministry far into the seventh epoch of evolutionary stability, when, possibly, they may go forth to minister in outer space; whereupon we conjecture their places may be taken by absonite beings from Paradise.
 \vs p055 4:20 \ublistelem{5.}\bibnobreakspace \bibemph{The fifth stage of light and life.} The readjustments of this stage of settled existence pertain almost entirely to the physical domains and are of primary concern to the Master Physical Controllers.
 \vs p055 4:21 \ublistelem{6.}\bibnobreakspace \bibemph{The sixth stage of light and life} witnesses the development of new functions of the mind circuits of the realm. Cosmic wisdom seems to become constitutive in the universe ministry of mind.
 \vs p055 4:22 \ublistelem{7.}\bibnobreakspace \bibemph{The seventh stage of light and life.} Early in the seventh epoch the Trinity Teacher counsellor of the Planetary Sovereign is joined by a volunteer adviser sent by the Ancients of Days, and later on they will be augmented by a third counsellor coming from the superuniverse Supreme Executive.
@@ -102,7 +102,7 @@
 \vs p055 6:5 We conceive that physical evolution will have attained its full development by the end of the fifth epoch of the light\hyp{}and\hyp{}life era. We observe that the upper limits of spiritual development associated with evolving human mind are determined by the Adjuster\hyp{}fusion level of conjoint morontia values and cosmic meanings. But concerning wisdom: While we do not really know, we conjecture that there can never be a limit to intellectual evolution and the attainment of wisdom. On a seventh\hyp{}stage world, wisdom can exhaust the material potentials, enter upon mota insight, and eventually even taste of absonite grandeur.
 \vs p055 6:6 We observe that on these highly evolved and long seventh\hyp{}stage worlds human beings fully learn the local universe language before they are translated; and I have visited a few very old planets where abandonters were teaching the older mortals the tongue of the superuniverse. And on these worlds I have observed the technique whereby the absonite personalities reveal the presence of the finaliters in the morontia temple.
 \vs p055 6:7 \pc This is the story of the magnificent goal of mortal striving on the evolutionary worlds; and it all takes place even before human beings enter upon their morontia careers; all of this splendid development is attainable by material mortals on the inhabited worlds, the very first stage of that endless and incomprehensible career of Paradise ascension and divinity attainment.
-\vs p055 6:8 But can you possibly imagine what sort of evolutionary mortals are now coming up from worlds long existing in the 7\ts{th} epoch of settled light and life? It is such as these who go on to the morontia worlds of the local universe capital to begin their ascension careers.
+\vs p055 6:8 But can you possibly imagine what sort of evolutionary mortals are now coming up from worlds long existing in the seventh epoch of settled light and life? It is such as these who go on to the morontia worlds of the local universe capital to begin their ascension careers.
 \vs p055 6:9 If the mortals of distraught Urantia could only view one of these more advanced worlds long settled in light and life, they would nevermore question the wisdom of the evolutionary scheme of creation. Were there no future of eternal creature progression, still the superb evolutionary attainments of the mortal races on such settled worlds of perfected achievement would amply justify man’s creation on the worlds of time and space.
 \vs p055 6:10 We often ponder: If the grand universe should be settled in light and life, would the ascending exquisite mortals still be destined to the Corps of the Finality? But we do not know.
 \usection{7.\bibnobreakspace The First or Planetary Stage}
@@ -121,13 +121,13 @@
 \usection{9.\bibnobreakspace The Third or Constellation Stage}
 \vs p055 9:1 The unification of a whole constellation of settled systems is attended by new distributions of executive authority and additional readjustments of universe administration. This epoch witnesses advanced attainment on every inhabited world but is particularly characterized by readjustments on the constellation headquarters, with marked modification of relationships with both the system supervision and the local universe government. During this age many constellation and universe activities are transferred to the system capitals, and the representatives of the superuniverse assume new and more intimate relations with the planetary, system, and universe rulers. Concomitant with these new associations, certain superuniverse administrators establish themselves on the constellation capitals as volunteer advisers to the Most High Fathers.
 \vs p055 9:2 When a constellation is thus settled in light, the legislative function ceases, and the house of System Sovereigns, presided over by the Most Highs, functions instead. Now, for the first time, such administrative groups deal directly with the superuniverse government in matters pertaining to Havona and Paradise relationships. Otherwise the constellation remains related to the local universe as before. From stage to stage in the settled life the univitatia continue to administer the constellation morontia worlds.
-\vs p055 9:3 As the ages pass, the Constellation Fathers take over more and more of the detailed administrative or supervising functions which were formerly centred on the universe headquarters. By the attainment of the sixth stage of stabilization these unified constellations will have reached the position of well\hyp{}nigh complete autonomy. Entrance upon the 7\ts{th} stage of settledness will no doubt witness the exaltation of these rulers to the true dignity signified by their names, the Most Highs. To all intents and purposes the constellations will then deal directly with the superuniverse rulers, while the local universe government will expand to grasp the responsibilities of new grand universe obligations.
+\vs p055 9:3 As the ages pass, the Constellation Fathers take over more and more of the detailed administrative or supervising functions which were formerly centred on the universe headquarters. By the attainment of the sixth stage of stabilization these unified constellations will have reached the position of well\hyp{}nigh complete autonomy. Entrance upon the seventh stage of settledness will no doubt witness the exaltation of these rulers to the true dignity signified by their names, the Most Highs. To all intents and purposes the constellations will then deal directly with the superuniverse rulers, while the local universe government will expand to grasp the responsibilities of new grand universe obligations.
 \usection{10.\bibnobreakspace The Fourth or Local Universe Stage}
 \vs p055 10:1 When a universe becomes settled in light and life, it soon swings into the established superuniverse circuits, and the Ancients of Days proclaim the establishment of the \bibemph{supreme council of unlimited authority.} This new governing body consists of the 100 Faithfuls of Days, presided over by the Union of Days, and the first act of this supreme council is to acknowledge the continued sovereignty of the Master Creator Son.
 \vs p055 10:2 The universe administration, as far as concerns Gabriel and the Father Melchizedek, is quite unchanged. This council of unlimited authority is chiefly concerned with the new problems and the new conditions arising out of the advanced status of light and life.
 \vs p055 10:3 \pc The Associate Inspector now mobilizes all Assigned Sentinels to constitute the \bibemph{stabilization corps of the local universe} and asks the Father Melchizedek to share its supervision with him. And now, for the first time, a corps of the Inspired Trinity Spirits are assigned to the service of the Union of Days.
 \vs p055 10:4 \pc The settling of an entire local universe in light and life inaugurates profound readjustments in the entire scheme of administration, from the individual inhabited worlds to the universe headquarters. New relationships extend down to the constellations and systems. The local universe Mother Spirit experiences new liaison relations with the Master Spirit of the superuniverse, and Gabriel establishes direct contact with the Ancients of Days to be effective when and as the Master Son may be absent from the headquarters world.
-\vs p055 10:5 During this and subsequent ages the Magisterial Sons continue to function as dispensational adjudicators, while 100 of these Avonal Sons of Paradise constitute the new high council of the Bright and Morning Star on the universe capital. Later on, and as requested by the System Sovereigns, one of these Magisterial Sons will become the supreme counsellor stationed on the headquarters world of each local system until the 7\ts{th} stage of unity is attained.
+\vs p055 10:5 During this and subsequent ages the Magisterial Sons continue to function as dispensational adjudicators, while 100 of these Avonal Sons of Paradise constitute the new high council of the Bright and Morning Star on the universe capital. Later on, and as requested by the System Sovereigns, one of these Magisterial Sons will become the supreme counsellor stationed on the headquarters world of each local system until the seventh stage of unity is attained.
 \vs p055 10:6 During this epoch the Trinity Teacher Sons are volunteer advisers, not only to the Planetary Sovereigns, but in groups of three they similarly serve the Constellation Fathers. And at last these Sons find their place in the local universe, for at this time they are removed from the jurisdiction of the local creation and are assigned to the service of the supreme council of unlimited authority.
 \vs p055 10:7 \pc The finaliter corps now, for the first time, acknowledges the jurisdiction of an extra\hyp{}Paradise authority, the supreme council. Heretofore the finaliters have recognized no supervision this side of Paradise.
 \vs p055 10:8 The Creator Sons of such settled universes spend much of their time on Paradise and its associated worlds and in counselling the numerous finaliter groups serving throughout the local creation. In this way the man of Michael will find a fuller fraternity of association with the glorified finaliter mortals.
@@ -141,14 +141,14 @@
 \vs p055 11:4 Since the minor sector status has to do with co\hyp{}ordinate physical equilibrium, we infer that major sector unification will be concerned with certain new intellectual levels of attainment, possibly some advanced achievements in the supreme realization of cosmic wisdom.
 \vs p055 11:5 \pc We arrive at conclusions regarding the readjustments which would probably attend the realization of hitherto unattained levels of evolutionary progress by observing the results of such achievements on the individual worlds and in the experiences of individual mortals living on these older and highly developed spheres.
 \vs p055 11:6 Let it be made clear that the administrative mechanisms and governmental techniques of a universe or a superuniverse cannot in any manner limit or retard the evolutionary development or spiritual progress of an individual inhabited planet or of any individual mortal on such a sphere.
-\vs p055 11:7 In some of the older universes we find worlds settled in the fifth and the sixth stages of light and life --- even far extended into the 7\ts{th} epoch --- whose local systems are not yet settled in light. Younger planets may delay system unification, but this does not in the least handicap the progress of an older and advanced world. Neither can environmental limitations, even on an isolated world, thwart the personal attainment of the individual mortal; Jesus of Nazareth, as a man among men, personally achieved the status of light and life over 1900 years ago on Urantia.
+\vs p055 11:7 In some of the older universes we find worlds settled in the fifth and the sixth stages of light and life --- even far extended into the seventh epoch --- whose local systems are not yet settled in light. Younger planets may delay system unification, but this does not in the least handicap the progress of an older and advanced world. Neither can environmental limitations, even on an isolated world, thwart the personal attainment of the individual mortal; Jesus of Nazareth, as a man among men, personally achieved the status of light and life over 1900 years ago on Urantia.
 \vs p055 11:8 It is by observing what takes place on long\hyp{}settled worlds that we arrive at fairly reliable conclusions as to what will happen when a whole superuniverse is settled in light, even if we cannot safely postulate the event of the stabilization of the 7 superuniverses.
 \usection{12.\bibnobreakspace The Seventh or Superuniverse Stage}
 \vs p055 12:1 We cannot positively forecast what would occur when a superuniverse became settled in light because such an event has never factualized. From the teachings of the Melchizedeks, which have never been contradicted, we infer that sweeping changes would be made in the entire organization and administration of every unit of the creations of time and space extending from the inhabited worlds to the superuniverse headquarters.
 \vs p055 12:2 It is generally believed that large numbers of the otherwise unattached creature\hyp{}trinitized sons are to be assembled on the headquarters and divisional capitals of the settled superuniverses. This may be in anticipation of the sometime arrival of outer\hyp{}spacers on their way in to Havona and Paradise; but we really do not know.
 \vs p055 12:3 \pc If and when a superuniverse should be settled in light and life, we believe that the now advisory Unqualified Supervisors of the Supreme would become the high administrative body on the headquarters world of the superuniverse. These are the personalities who are able to contact directly with the absonite administrators, who will forthwith become active in the settled superuniverse. Although these Unqualified Supervisors have long functioned as advisers and counsellors in advanced evolutionary units of creation, they do not assume administrative responsibilities until the authority of the Supreme Being becomes sovereign.
 \vs p055 12:4 The Unqualified Supervisors of the Supreme, who function more extensively during this epoch, are not finite, absonite, ultimate, or infinite; they \bibemph{are} supremacy and only represent God the Supreme. They are the personalization of time\hyp{}space supremacy and therefore do not function in Havona. They function only as supreme unifiers. They may possibly be involved in the technique of universe reflectivity, but we are not certain.
-\vs p055 12:5 \pc None of us entertain a satisfactory concept of what will happen when the grand universe (the 7 superuniverses as dependent on Havona) becomes entirely settled in light and life. That event will undoubtedly be the most profound occurrence in the annals of eternity since the appearance of the central universe. There are those who hold that the Supreme Being himself will emerge from the Havona mystery enshrouding his spirit person and will become residential on the headquarters of the 7\ts{th} superuniverse as the almighty and experiential sovereign of the perfected creations of time and space. But we really do not know.
+\vs p055 12:5 \pc None of us entertain a satisfactory concept of what will happen when the grand universe (the 7 superuniverses as dependent on Havona) becomes entirely settled in light and life. That event will undoubtedly be the most profound occurrence in the annals of eternity since the appearance of the central universe. There are those who hold that the Supreme Being himself will emerge from the Havona mystery enshrouding his spirit person and will become residential on the headquarters of the seventh superuniverse as the almighty and experiential sovereign of the perfected creations of time and space. But we really do not know.
 \vsetoff
 \vs p055 12:6 [Presented by a Mighty Messenger temporarily assigned to the Archangel Council on Urantia.]
 \quizlink
