Explain why there are 641,597 architectural worlds in Nebadon

--- a/tex/p037.tex
+++ b/tex/p037.tex
@@ -88,7 +88,7 @@
 \vs p037 9:11 \pc \bibemph{The Midway Creatures.} In the early days of most inhabited worlds, certain superhuman but materialized beings are of assignment, but they usually retire upon the arrival of the Planetary Adams. The transactions of such beings and the efforts of the Material Sons to improve the evolutionary races often result in the appearance of a limited number of creatures who are difficult to classify. These unique beings are often midway between the Material Sons and the evolutionary creatures; hence their designation, midway creatures. In a comparative sense these midwayers are the permanent citizens of the evolutionary worlds. From the early days of the arrival of a Planetary Prince to the far\hyp{}distant time of the settling of the planet in light and life, they are the only group of intelligent beings to remain continuously on the sphere. On Urantia the midway ministers are in reality the actual custodians of the planet; they are, practically speaking, the citizens of Urantia. Mortals are indeed the physical and material inhabitants of an evolutionary world, but you are all so short\hyp{}lived; you tarry on your nativity planet such a short time. You are born, live, die, and pass on to other worlds of evolutionary progression. Even the superhuman beings who serve on the planets as celestial ministers are of transient assignment; few of them are long attached to a given sphere. The midway creatures, however, provide continuity of planetary administration in the face of ever\hyp{}changing celestial ministries and constantly shifting mortal inhabitants. Throughout all of this never\hyp{}ceasing changing and shifting, the midway creatures remain on the planet uninterruptedly carrying on their work.
 \vs p037 9:12 \pc In like manner, all divisions of the administrative organization of the local universes and superuniverses have their more or less permanent populations, inhabitants of citizenship status. As Urantia has its midwayers, Jerusem, your system capital, has the Material Sons and Daughters; Edentia, your constellation headquarters, has the univitatia, while the citizens of Salvington are twofold, the created susatia and the evolved Spirit\hyp{}fused mortals. The administrative worlds of the minor and major sectors of the superuniverses do not have permanent citizens. But the Uversa headquarters spheres are continuously fostered by an amazing group of beings known as the \bibemph{abandonters,} the creation of the unrevealed agents of the Ancients of Days and the seven Reflective Spirits resident on the capital of Orvonton. These residential citizens on Uversa are at present administering the routine affairs of their world under the immediate supervision of the Uversa corps of the Son\hyp{}fused mortals. Even Havona has its native beings, and the central Isle of Light and Life is the home of the various groups of Paradise Citizens.
 \usection{10.\bibnobreakspace Other Local Universe Groups}
-\vs p037 10:1 Besides the seraphic and mortal orders, who will be considered in later papers, there are numerous additional beings concerned in the maintenance and perfecting of such a gigantic organization as the universe of Nebadon, which even now has more than 3,000,000 inhabited worlds, with 10,000,000 in prospect. The various Nebadon types of life are much too numerous to be catalogued in this paper, but there are two unusual orders that function extensively on the 647,591 architectural spheres of the local universe, that may be mentioned.
+\vs p037 10:1 Besides the seraphic and mortal orders, who will be considered in later papers, there are numerous additional beings concerned in the maintenance and perfecting of such a gigantic organization as the universe of Nebadon, which even now has more than 3,000,000 inhabited worlds, with 10,000,000 in prospect. The various Nebadon types of life are much too numerous to be catalogued in this paper, but there are two unusual orders that function extensively on the 647,591 architectural spheres\fnst{\textbf{647,591 architectural spheres}, It is easy to arrive at this number if we add the architectural worlds of the Salvington cluster ($1 + 70 + 70\times 6 = 491$), those of each of the 100 constellations ($1 + 70 + 70\times 10 = 771$ in each) and those of each of the $100\times 100 = 10,000$ local systems ($1 + 7 + 7\times 7 = 57$ in each): $491 + 77100 + 570000 = 647591$.} of the local universe, that may be mentioned.
 \vs p037 10:2 \pc The \bibemph{Spironga} are the spirit offspring of the Bright and Morning Star and the Father Melchizedek. They are exempt from personality termination but are not evolutionary or ascending beings. Neither are they functionally concerned with the evolutionary ascension regime. They are the spirit helpers of the local universe, executing the routine spirit tasks of Nebadon.
 \vs p037 10:3 \pc The \bibemph{Spornagia.} The architectural headquarters worlds of the local universe are real worlds --- physical creations. There is much work connected with their physical upkeep, and herein we have the assistance of a group of physical creatures called spornagia. They are devoted to the care and culture of the material phases of these headquarters worlds, from Jerusem to Salvington. Spornagia are neither spirits nor persons; they are an animal order of existence, but if you could see them, you would agree that they seem to be perfect animals.
 \vs p037 10:4 \pc The various \bibemph{courtesy colonies} are domiciled on Salvington and elsewhere. We especially profit from the ministry of the celestial artisans on the constellations and benefit from the activities of the reversion directors, who operate chiefly on the capitals of the local systems.
